Intructions for installation

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 .vs/ProjectADCATER/v17/.wsuo
 .vs/slnx.sqlite
 .vs/VSWorkspaceState.json
+.vs/ProjectADCATER/FileContentIndex/beb5c650-1c77-454e-9990-5121ea5cab1e.vsidx
