Added outcome to the score

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 .vs/slnx.sqlite
 .vs/VSWorkspaceState.json
 .vs/ProjectADCATER/FileContentIndex/beb5c650-1c77-454e-9990-5121ea5cab1e.vsidx
+.vs/ProjectADCATER/FileContentIndex/9c045219-6fd5-49f0-90d9-23704d684532.vsidx
+.vs/ProjectADCATER/FileContentIndex/0c763d08-81e9-4ad6-a24e-f718e325edd1.vsidx
+.vs/ProjectADCATER/FileContentIndex/79108133-5343-4672-8e39-f96db5c6e974.vsidx
